--- a/index.html
+++ b/index.html
@@ -1,8 +1,27 @@
 <!DOCTYPE html>
 <html>
    <head>
+      <title>Khory's Webfolio</title>
    </head>
    <body>
+      <section>
+         <h1 id="resumeTitle">Resume</h1>
+         <p id="resumeP">Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem quia, molestiae minima reiciendis, delectus
+             similique quam asperiores culpa, nisi voluptatibus est ducimus. Nam consequatur, officiis dolorem aperiam dolore nobis deserunt?</p>
+         <button id="resumeBttn" a href="resume.html">View Resume</button>
+      </section>
+      <section>
+         <h1 id="tripTitle">My latest trip</h1>
+         <p id="tripP">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequatur, temporibus! Cum quod beatae at explicabo
+             eos repudiandae autem voluptatum commodi sunt, nisi aliquam dolorum dolorem facilis veniam eius. Cumque, nostrum!</p>
+         <button id="tripBttn" a href="trip.html">View Trip</button>
+      </section>
+      <section>
+         <h1 id="interests">Interests</h1>
+         <p id="interestsP">Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur odio veniam excepturi eos! 
+            Quis quos dolore fugit id, exercitationem blanditiis error eligendi unde, enim libero, odit voluptate fuga architecto beatae?</p>
+         <button id="interestsBttn" a href="interests.html">View Interests</button>
+      </section>
       <!-- Write your HTML in this file! -->
    </body>
 </html>
