--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
    <head>
       <title>Khory's Webfolio</title>
+      <link rel="stylesheet" href="style.css">   
    </head>
    <body>
       <section>
