modified index & css

--- a/index.html
+++ b/index.html
@@ -6,13 +6,12 @@
    </head>
    <body id="body">
       <header>
-
-      </header>
+         <h1 id="title">Khory's Last Trip!</h1>
+      </header id="mainHeader">
       <!-- Write your HTML in this file! -->
       <main>
-         <h1 id="title">Khory's Last Trip!</h1>
          <article id="article">
-            <p>
+            <p id="testP" class="funParagraph">
                The last trip I went on was a trip to Springfield, MO. I had a cousin named Robbie
                that was graduating from college last year and I wanted to go see him. Two of my closest cousins Derrick and David
                decided they wanted to go and support him <i>(as well as celebrate, of course)</i>. 
