--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
    </head>
    <body id="body">
       <header>
-         <h1 id="title">Khory's Last Trip!</h1>
-      </header id="mainHeader">
+         <h1 id="mainHeading">Khory's Last Trip!</h1>
+      </header>
       <!-- Write your HTML in this file! -->
       <main>
+         
          <article id="article">
             <p id="testP" class="funParagraph">
                The last trip I went on was a trip to Springfield, MO. I had a cousin named Robbie
@@ -18,7 +19,7 @@
                We all decided to get there a day early to hang out and then celebrate with the rest of the family 
                after the ceremony. Then and there <strong>a road trip was born!</strong>
             </p>
-            <img src="images/group pic.jpg" alt="A picture of my and my three cousins."
+            <img src="images/group pic.jpg" alt="A picture of my and my three cousins.">
             <p>
                By no means was the trip to Sprinfield a long one (about 3hrs), but it was a fun one.
                Having good company always makes the trip more enjoyable as well as faster. On the way, we stopped at a few gas stations
