--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
    <head>
       <title>Khory's Webfolio</title>
-      <link rel="stylesheet" href="style.css">   
+      <link rel="stylesheet" href="styles.css">   
    </head>
    <body id="body">
       <header>
@@ -54,7 +54,7 @@
       
       
       <footer id="footer">
-
+         &copy;
       </footer>
    </body>
 </html>
