--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                They had an entire wall of beef jerky as well as a small kitchen for your standard odds and ends. That gas station is the size of a small grocery store
                with pumps <i>for days</i>! 
                <img src="images/Screenshot (2).png" alt="Apicture of the convienance area with a massive wall of beef jerky
-               looming over the surroundings."
+               looming over the surroundings.">
             </p>
             <p>
                When we made it to Springfield, its was almost a straight shot to our cousins apartment a couple blocks away from the main campus.
